Decrease usages of Commons Lang